Minor code improvements.